cambio de parrafos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
                     <h1> Hola! Soy Maria Leon! </h1>
                     <p>
                         Analista de requerimientos. Diseño y ejecucion de casos de prueba en ambientes de testing.
-                        Reporte y seguimiento de Busg. Informes de avance.
+                        Reporte y seguimiento de Busg. Informes de avance. Actualmente estudiante de Eidos Always Learning donde 
+                        me estoy capacitando como Desarrolladora WED.
+                        Aprendiendo distintos lenguajes como HTML Y CSS. 
+
 
                     </p>
                    
@@ -46,7 +49,7 @@
                     <h2>Hablemos!</h2>
     
                     <p>
-                        Soy una perosna con buena comunicacion. Capacidad analitica, de gestion y organizacion.
+                        Soy una persona con buena comunicacion. Capacidad analitica, de gestion y organizacion.
                         Iniciativa y habilidades de relacionarme y trabajar en equipo.
                         En busqueda de una oportunidad laboral.
                         si estas interesad@ en saber mas de mi! no dudes en escribirme.
